subpage header spacing fix

--- a/src/styles/components/_Post.scss
+++ b/src/styles/components/_Post.scss
@@ -1,16 +1,23 @@
 .Post {
   @include container;
 
-  &__header {
-    text-align: center;
-    @include spacing("lg", "margin-bottom");
-  }
-
   &__title {
     max-width: rem-calc(1200);
     margin-left: auto;
     margin-right: auto;
-    @include spacing("lg", "padding-bottom");
+  }
+
+  &__lead {
+    font-family: $f-serif;
+    line-height: 1.35;
+    @include font-size(h3);
+    @include content-width("text");
+    @include spacing("sm", "margin-top");
+  }
+
+  &__header {
+    text-align: center;
+    @include spacing("lg", "margin-bottom");
   }
 
   &__date {
@@ -19,13 +26,6 @@
     @include spacing("sm", "margin-top");
     @extend .small;
     text-align: left;
-  }
-
-  &__lead {
-    font-family: $f-serif;
-    line-height: 1.35;
-    @include font-size(h3);
-    @include content-width("text");
   }
 
   &__featured-image {
